# django-serverless-oauth-session

./: README.md  pyproject.toml
django_serverless_oauth_client/: apps.py  models.py  oauth.py  urls.py  views.py
django_serverless_oauth_session/: __init__.py  apps.py  models.py  oauth.py  urls.py  utils.py  views.py
example_project/: config-development.yaml
example_project/frontend/: callback.py  urls.py  views.py
example_project/frontend/templates/: index.html  repos.html
example_project/project/: settings.py  urls.py
tests/: test_django_serverless_oauth_client.py
