[tool.poetry]
name = "django-serverless-oauth-session"
version = "0.4.2"
description = "Provides a Django app for storing tokens in AWS's DynamoDB, and providing a convenient requests session which uses the token. This is a use-case-specific library, and is intended for backend integrations that must authenticate with an API which only supports OAuth2 for its authentication protocol."
authors = ["Alex Drozd <drozdster@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/brno32/django-serverless-oauth-session"
keywords = ["django", "serverless", "oauth", "aws", "dynamodb", "requests", "sessions"]
packages = [
    { include = "django_serverless_oauth_session" }
]

[tool.poetry.dependencies]
python = "^3.8"
pynamodb = "^5.0.3"
Authlib = "^0.15.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
django-configuration-management = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
